--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -4,10 +4,40 @@
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+     <mat-nav-list>
+      <!-- <a mat-list-item href="#">Productos</a>
+      <a mat-list-item href="#">Ventas</a>
+      <a mat-list-item href="#">Perdidas</a> -->
+      <a mat-list-item href="#">
+        <i class="material-icons">
+          home
+        </i>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Inicio
+      </a>
+      <a mat-list-item href="/products">
+        <i class="material-icons">
+          fastfood
+        </i>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Productos
+      </a>
+      <a mat-list-item href="#">
+        <i class="material-icons">
+          add_shopping_cart
+        </i>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ventas
+      </a>
+      <a mat-list-item href="#">
+        <i class="material-icons">
+          donut_small
+        </i>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Inventario
+      </a>
+      <a mat-list-item href="#">
+        <i class="material-icons">
+          trending_down
+        </i>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Perdidas
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -21,7 +51,21 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>salesin-ui</span>
+      <span class="spacer">
+      </span>
+      <a routerLink="/products">
+        <i class="material-icons md-36">
+          settings_applications
+        </i>
+      </a>
+      <a routerLink="#">
+        <i class="material-icons md-36">
+          account_circle
+        </i>
+        Ingresar
+      </a>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <ng-content></ng-content>
   </mat-sidenav-content>
 </mat-sidenav-container>
