--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<main-nav></main-nav>  
-<!-- <router-outlet></router-outlet> -->
-    
+<main-nav>
+<!--   <button mat-raised-button color='accent'>Click Me</button>
+  <a routerLink="/products">Heroes</a> -->
+<router-outlet></router-outlet>  
+</main-nav>
