--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -5,13 +5,31 @@
 .sidenav {
   width: 200px;
 }
-
-.sidenav .mat-toolbar {
-  background: inherit;
+/* @media(min-width: 768px){
+  .sidenav{
+    display: none;
+  }
+  https://material.io/design/iconography/animated-icons.html#theming
+} */
+.hidden{
+  display: none;
 }
+
+/* .sidenav .mat-toolbar {
+  background: inherit;
+} */
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
+}
+.spacer{
+  flex: 1 1 auto;
+}
+mat-toolbar a {
+  display: inline-block;
+  margin: 0 10px;
+  color: white;
+  text-decoration: none ;
 }
