--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -19,10 +19,22 @@
 <products-addset></products-addset>
 <!-- end here another component -->
 <br>
+<mat-form-field>
+  <mat-label>Mostrar</mat-label>
+  <!--  (change)="onEventSelection($event.value)-->
+  <mat-select [(value)]="selected" (selectionChange)="onEventSelection($event.value)">
+      <mat-option *ngFor="let i of liststatus" [value]="i.value">
+          {{i.viewValue}}
+      </mat-option>
+  </mat-select>
+</mat-form-field>
 
+<br>
 <mat-grid-list cols='5' rowHeight='100px'>
   <mat-grid-tile *ngFor='let item of products' [colspan]='1' [rowspan]='1' (click)="onSelect($event, item)">
-    <!-- -->
+    <!-- 
+       <button *ngIf="(item.data.type == 1)">{{item.data.name}}</button>
+    -->
     <!-- class='tile-image' -->
     <img src='{{item.pathimg}}'>
     <mat-grid-tile-header>
