--- a/src/app/products/addset/addset.component.html
+++ b/src/app/products/addset/addset.component.html
@@ -13,10 +13,10 @@
                 <br>
             </div>
             <div class="div-column">
-                <mat-form-field>
+                <mat-form-field class="hideComponent">
                     <input matInput placeholder='idproducts' [(ngModel)]='model.idproducts'>
                 </mat-form-field>
-                <mat-form-field>
+                <mat-form-field class="hideComponent">
                     <input matInput placeholder='pathimg' [(ngModel)]='model.pathimg'>
                 </mat-form-field>
                 <mat-form-field>
@@ -26,7 +26,7 @@
                     <input matInput placeholder='Código de Barras o clave' name='barcode' [(ngModel)]='model.barcode'>
                 </mat-form-field>
 
-                <mat-form-field>
+                <mat-form-field class="hideComponent">
                     <input matInput placeholder='Estatus' name='idcstatus' [(ngModel)]='model.idcstatus'>
                 </mat-form-field>
 
