--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,6 @@
 <!-- <p>products works!</p> -->
 <div id='divSubMenu'>
-  <button (click)='openDialog()' mat-icon-button matTooltip='Agregar nuevo producto'>
+  <button (click)='ProductAddSet()' mat-icon-button matTooltip='Agregar nuevo producto'>
     <mat-icon>add_circle_outline</mat-icon>
   </button>
 
