--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -16,7 +16,7 @@
 <br>
 <!-- start here another component -->
 
-<products-addset></products-addset>
+<products-addset #component-child></products-addset>
 <!-- end here another component -->
 <br>
 <mat-form-field>
