--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -20,7 +20,7 @@
         </i>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Productos
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item href="/sales">
         <i class="material-icons">
           add_shopping_cart
         </i>
