--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -1,16 +1,16 @@
 <mat-tab-group>
     <mat-tab>
       <ng-template mat-tab-label>
-        <mat-icon class="example-tab-icon">thumb_up</mat-icon>
-        First
+        <mat-icon class="example-tab-icon">favorite</mat-icon>
+        Favoritos
       </ng-template>
       Content 1
     </mat-tab>
   
     <mat-tab>
       <ng-template mat-tab-label>
-        <mat-icon class="example-tab-icon">thumb_up</mat-icon>
-        Second
+        <mat-icon class="example-tab-icon">grain</mat-icon>
+        Todos los productos
       </ng-template>
       Content 2
     </mat-tab>
