--- a/src/app/sales/placeorder/placeorder.component.html
+++ b/src/app/sales/placeorder/placeorder.component.html
@@ -1,2 +1,47 @@
-<p>Tu orden</p>
-//TODO use flexbox
+<h2>
+    Tu Orden
+</h2>
+<h4>
+    Remover Todo
+</h4>
+<span>
+    <table>
+        <tr>
+            <td>Maruchan</td>
+            <td>x1</td>
+        </tr>
+        <tr>
+            <td>
+                <i class="material-icons">
+                    clear
+                </i>
+            </td>
+            <td>13</td>
+        </tr>
+    </table>
+</span>
+<span>
+    <table>
+        <tr>
+            <td>Total Productos</td>
+            <td>x1</td>
+        </tr>
+        <tr>
+            <td>
+                Total:
+            </td>
+            <td>13
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                Pedir Orden
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                Guardar Orden
+            </td>
+        </tr>
+    </table>
+</span>
