--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -26,7 +26,7 @@
         </i>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ventas
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item href="/inventories">
         <i class="material-icons">
           donut_small
         </i>
