--- a/src/app/inventories/nvtrsgrid/nvtrsgrid.component.html
+++ b/src/app/inventories/nvtrsgrid/nvtrsgrid.component.html
@@ -69,6 +69,6 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)='onSelect($event,row)'></tr>
 
 </table>
