shrinkage in pipeline20200223.1119

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -32,7 +32,7 @@
         </i>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Inventario
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item href="/inventories-shrinkage">
         <i class="material-icons">
           trending_down
         </i>
