--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main-nav>
-<!--   <button mat-raised-button color='accent'>Click Me</button>
-  <a routerLink="/products">Heroes</a> -->
-<router-outlet></router-outlet>  
+  <mat-progress-spinner class="example-margin" [color]="color" [mode]="mode" [value]="value">
+  </mat-progress-spinner>
+  <router-outlet></router-outlet>
 </main-nav>
