--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<div id="divProceso" class="cCargando" style="visibility: hidden;">
+  <div id="divProcesoMsg" class="cCargandoImg">
+    <br />
+    Espere ...
+    <br />
+  </div>
+</div>
+
 <main-nav>
   <mat-progress-spinner class="example-margin" [color]="color" [mode]="mode" [value]="value">
   </mat-progress-spinner>
