--- a/src/app/products/addset/addset.component.html
+++ b/src/app/products/addset/addset.component.html
@@ -43,13 +43,13 @@
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field>
-                        <input matInput placeholder='Precio' name='unitary_price' [(ngModel)]='model.unitary_price'>
+                        <input type="number" name="quantity" min="1" max="999999" matInput placeholder='Precio' name='unitary_price' [(ngModel)]='model.unitary_price'>
                     </mat-form-field>
                     <mat-form-field>
-                        <input matInput placeholder='Costo' name='unitary_cost' [(ngModel)]='model.unitary_cost'>
+                        <input type="number" name="quantity" min="1" max="999999" matInput placeholder='Costo' name='unitary_cost' [(ngModel)]='model.unitary_cost'>
                     </mat-form-field>
                     <mat-form-field>
-                        <input matInput placeholder='Existencias' name='existence' [(ngModel)]='model.existence'>
+                        <input type="number" name="quantity" min="1" max="999999" matInput placeholder='Existencias' name='existence' [(ngModel)]='model.existence'>
                     </mat-form-field>
                 </div>
 
@@ -57,8 +57,8 @@
         </mat-card-content>
         <mat-card-actions>
             <!-- <button mat-raised-button type="submit" color="primary">Submit</button> -->
-            <button mat-button (click)='onSaveForm()'>ACEPTAR</button>
-            <button mat-button>CANCELAR</button>
+            <button mat-stroked-button color='accent' (click)='onSaveForm()'>ACEPTAR</button>
+            <button mat-stroked-button color='warn' (click)='onCancel()'>CANCELAR</button>
         </mat-card-actions>
     </mat-card>
 </div>
