--- a/src/app/inventories/inventories.component.html
+++ b/src/app/inventories/inventories.component.html
@@ -4,10 +4,10 @@
             <mat-tab>
                 <ng-template mat-tab-label>
                     <mat-icon class="example-tab-icon">grain</mat-icon>
-                    Todos los productos
+                    Productos
                 </ng-template>
-                <app-nvtrsitem></app-nvtrsitem>
-                <p>inventaries works!</p>
+                <app-nvtrsitem class="hideComponent"></app-nvtrsitem>
+                
                 <app-nvtrsgrid></app-nvtrsgrid>
             </mat-tab>
         </mat-tab-group>
