--- a/src/app/inventories/nvtrsitem/nvtrsitem.component.html
+++ b/src/app/inventories/nvtrsitem/nvtrsitem.component.html
@@ -16,6 +16,9 @@
                     </div>
                     <div class="div-column">
                         <mat-form-field class="hideComponent">
+                            <input matInput placeholder='identries' [(ngModel)]='model.entries'>
+                        </mat-form-field>
+                        <mat-form-field class="hideComponent">
                             <input matInput placeholder='idproducts' [(ngModel)]='model.idproducts'>
                         </mat-form-field>
                         <mat-form-field class="hideComponent">
