--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .material-icons.md-30 { font-size: 30px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
+
+.hideComponent{
+    /* visibility: hidden; */
+    display: none;
+    /* display: block; */
+}
