--- a/src/app/inventories/inventories.component.html
+++ b/src/app/inventories/inventories.component.html
@@ -6,6 +6,7 @@
                     <mat-icon class="example-tab-icon">grain</mat-icon>
                     Productos
                 </ng-template>
+                <app-nvtrsrowitem></app-nvtrsrowitem>
                 <app-nvtrsitem class="hideComponent"></app-nvtrsitem>
                 
                 <app-nvtrsgrid></app-nvtrsgrid>
