--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -24,13 +24,13 @@
         </i>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ventas
       </a>
-      <a mat-list-item href="/inventories">
+      <a mat-list-item href="/entries">
         <i class="material-icons">
           donut_small
         </i>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Inventario
       </a>
-      <a mat-list-item href="/inventories-shrinkage">
+      <a mat-list-item href="/shrinkages">
         <i class="material-icons">
           trending_down
         </i>
