--- a/src/app/inventories/nvtrsgrid/nvtrsgrid.component.html
+++ b/src/app/inventories/nvtrsgrid/nvtrsgrid.component.html
@@ -1,4 +1,8 @@
-<table mat-table [dataSource]="dataSource">
+<div *ngFor='let item of dataSource'>
+    <app-nvtrsrowitem [data]="dataSource">
+    </app-nvtrsrowitem>
+</div>
+<!-- <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="idproducts">
         <th mat-header-cell *matHeaderCellDef> ID </th>
         <td mat-cell *matCellDef="let element"> 
@@ -71,4 +75,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)='onSelect($event,row)'></tr>
 
-</table>
+</table> -->
