https://stackoverflow.com/questions/43712445/how-to-pass-object-as-component-input-in-ngfor
https://stackoverflow.com/questions/43712445/how-to-pass-object-as-component-input-in-ngfor

--- a/src/app/inventories/nvtrsrowitem/nvtrsrowitem.component.html
+++ b/src/app/inventories/nvtrsrowitem/nvtrsrowitem.component.html
@@ -10,7 +10,7 @@
             <label class="itemvalue">identries</label>
         </div> -->
         <div>
-            <label class="itemkey">{{entryproduct.name}}</label>
+            <label class="itemkey">entryproduct.name</label>
         </div>
         <div>
             <label class="itemkey">Codigo: </label>
