--- a/src/app/inventories/nvtrsgrid/nvtrsgrid.component.html
+++ b/src/app/inventories/nvtrsgrid/nvtrsgrid.component.html
@@ -1,11 +1,11 @@
 <!-- *ngFor="let audio of audios" [soundBoardAudio]="audio" -->
-    <app-nvtrsrowitem *ngFor='let item of dataSource' [dataItem]="item">
-    </app-nvtrsrowitem>
+    <!-- <app-nvtrsrowitem *ngFor='let item of dataSource' [dataItem]="item">
+    </app-nvtrsrowitem> -->
 
-<!-- <div *ngFor='let item of dataSource'>
-    <app-nvtrsrowitem [data]="dataSource">
+<div *ngFor='let item of dataSource'>
+    <app-nvtrsrowitem [data]="item">
     </app-nvtrsrowitem>
-</div> -->
+</div>
 <!-- <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="idproducts">
         <th mat-header-cell *matHeaderCellDef> ID </th>
