--- a/src/app/inventories/nvtraddset/nvtraddset.component.html
+++ b/src/app/inventories/nvtraddset/nvtraddset.component.html
@@ -1,8 +1,7 @@
-<p>nvtraddset works!</p>
 <!-- <div id='divProductAddSet' class="hideComponent" > 
 onselect from nvtrsrowitem chance class hideComponent    
 -->
-<div id='divProductAddSet'>
+<div id='divProductAddSet' class="hideComponent" >
     <mat-card>
         <mat-card-title>PRODUCTO </mat-card-title>
         <mat-card-subtitle> {{model.name}} </mat-card-subtitle>
