--- a/src/app/inventories/inventories.component.html
+++ b/src/app/inventories/inventories.component.html
@@ -4,7 +4,7 @@
             <mat-tab>
                 <ng-template mat-tab-label>
                     <mat-icon class="example-tab-icon">grain</mat-icon>
-                    Productos
+                    Agregar Inventario
                 </ng-template>
                 <!-- <app-nvtrsrowitem></app-nvtrsrowitem> -->
                 <!-- <app-nvtrsitem class="hideComponent"></app-nvtrsitem> -->
@@ -14,7 +14,7 @@
             <mat-tab>
                 <ng-template mat-tab-label>
                     <mat-icon class="example-tab-icon">grain</mat-icon>
-                    Entradas
+                    Registros
                 </ng-template>
             </mat-tab>
         </mat-tab-group>
